<resources>
    <string name="app_name">Ejercicios4</string>
    <string name="btn_title_main">Ir al formulario</string>
    <string name="tv_status_main">No completado</string>

    <string name="hint_userform_name">¿Cómo te llamas?</string>
    <string name="hint_userform_email">mariadmar@gmail.com</string>
    <string name="hint_userform_username">mariadmar</string>

    <string name="btn_title_userform">Completado</string>

</resources>
