<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_main_to_form"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginBottom="34dp"
        android:background="#26406c"
        android:text="@string/btn_title_main"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_status"
        app:layout_constraintStart_toStartOf="@+id/tv_main_status"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <EditText
        android:id="@+id/edt_userform_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/tv_main_status"
        app:layout_constraintStart_toStartOf="@+id/edt_userform_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_userform_name" />

    <EditText
        android:id="@+id/edt_userform_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="71dp"
        android:ems="10"
        android:hint="@string/hint_userform_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_userform_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_main_status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="51dp"
        android:text="@string/tv_status_main"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_to_form"
        app:layout_constraintEnd_toEndOf="@+id/edt_userform_email"
        app:layout_constraintStart_toStartOf="@+id/edt_userform_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_userform_email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="186dp"
        android:text="Bienvenido al sistema de login a otro nivel."
        app:layout_constraintBottom_toTopOf="@+id/edt_userform_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_status"
        app:layout_constraintStart_toStartOf="@+id/edt_userform_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="259dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_to_form"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burgger" />


</android.support.constraint.ConstraintLayout>